--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: "Huei-Wen Teng 鄧惠文"
+title: "簡夢萱"
 author: "Huei-Wen Teng"
 description: "Professor at National Yang Ming Chiao Tung University"
 theme: jekyll-theme-cayman  # Change theme if needed
