--- a/index.html
+++ b/index.html
@@ -1,81 +1,122 @@
----
-title: "簡夢萱"
-author: "Huei-Wen Teng"
-description: "Professor at National Yang Ming Chiao Tung University"
-theme: jekyll-theme-cayman  # Change theme if needed
----
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>DavidLu.github.io</title>
+</head>
+<body>
+  <!-- 主標題 -->
+  <h1>Chia-Hung Lu 盧家宏</h1>
 
-# Huei-Wen Teng 鄧惠文
+  <!-- 置中顯示圖片 -->
+  <p align="center">
+    <img 
+      src="https://github.com/user-attachments/assets/140f18cf-8123-4820-912a-807803b69bd5" 
+      width="200" 
+      height="280" 
+      alt="Profile Photo"
+    />
+  </p>
 
-## Biography
-![Huei-Wen Teng](https://i.imgur.com/K3qUn90.jpg){: style="width: 250px; float: right; margin-left: 20px;"}
+  <!-- 簡介 -->
+  <h3>👋 Hi there, I'm David LU</h3>
+  <p>
+    💡 <strong>A Master’s student in Management Science with three months of AML Associate experience, 
+    possessing a solid background in finance, with proven leadership through multiple student association 
+    roles and focusing on financial analysis and problem-solving capabilities.</strong>
+  </p>
 
-I am a Professor in the Department of Information Management and Finance at National Yang Ming Chiao Tung University (NYCU). My research interests encompass Simulation, Financial Statistical Methods, and Machine Learning & AI, with interdisciplinary applications in financial wealth and risk management.
+  <p>💻 <strong>Technical Skills:</strong> CMoney , TEJ, R, basic Python, SQL.</p>
+  <p>🏦 <strong>Experience:</strong> Anti Money Laundering Associate.</p>
+  <hr />
 
-📚 Google Scholar: [HDPf0-IAAAAJ](https://scholar.google.com/citations?user=HDPf0-IAAAAJ&hl=en)  
-📄 SSRN: [378952](https://papers.ssrn.com/sol3/cf_dev/AbsByAuth.cfm?per_id=3789459)  
-💻 GitHub: [venteng](https://github.com/venteng)  
-✉️ Email: venteng@gmail.com  
+  <!-- Work Experience -->
+  <h3>🌟 <strong>💼 Work Experience</strong></h3>
+  <ul>
+    <li>
+      🏦 <strong>BNP Paribas Cardif Anti Money Laundering Associate</strong> (2024.05 - 2024.08)
+      <ul>
+        <li>
+          Focused on name list screening and completed analysis of match results for 10,000 customer profiles, 
+          encompassing various customer types—including politically exposed persons (PEPs) and adverse media— 
+          to identify high-risk individuals during customer identification and verification(CIDV) to prevent 
+          financial crime.
+        </li>
+        <li>
+          Applied rules-based dispositioning to eliminate clear false matches and identify both true and 
+          potential matches, leveraging structured and unstructured data and accurately matching of 
+          the information to specific individuals for further analysis.
+        </li>
+        <li>
+          Analyzed match results and escalated potential true hits to Level 2 analysts for further investigation, 
+          effectively reducing compliance risks.
+        </li>
+        <li>
+          Collaborated with team experts to conduct in-depth analyses of diverse, highly complex cases, 
+          ensuring adherence to global financial institution standards.
+        </li>
+      </ul>
+    </li>
+  </ul>
 
-🔗 [More about me](https://venteng.github.io/bio.html)
+  <hr />
+  
+  <!-- Coursework Achievements -->
+  <h3>🌟 <strong>📃 Coursework Achievements</strong></h3>
+  <ul>
+    <li>
+      🏦 <strong>Investment and Corporate Finance Program </strong> (2021.09 - 2023.06)
+      <ul>
+        <li>
+          Evaluated the merger between Fubon Financial Holding and Jih Sun Financial Holding, focusing on
+          potential synergies and overall impact.
+        </li>
+        <li>
+          Performed a sample analysis in Excel to identify key factors influencing TSMC’s Return on Equity (ROE).
+        </li>
+        <li>
+          Compared and examined ECLAT (儒鴻) and MAKALOT (聚陽) financial statements and ratios to provide
+          informed investment recommendations.
+        </li>
+      </ul>
+    </li>
+  </ul>
 
----
+  <hr />
 
-## 📌 Research Highlights (Coming Soon)
+  <!-- Leadership and Volunteer Experience-->
+  <h3>🌟 <strong>🎯 Leadership and Volunteer Experience</strong></h3>
+  <ul>
+    <li>
+      <strong>President of NYCU IMS Student Association</strong> (2024.09 – 2025.09)
+      <ul>
+        <li>
+          Orchestrate and lead a team of 3 members to successfully execute 4 major events, respectively are final dinner party, 
+          admission information session, graduation ceremony of institution, and welcome party, achieving more than 80% of students participated.
+        </li>
+        <li>Serve as a mediator of communication between the faculties and students to ensure students’ concerns were effectively communicated.</li>
+      </ul>
+    </li>
+    <br />
+    <li>
+      <strong>Vice President of YZU International Business Student Association</strong> (2020.05 - 2021.05)
+      <ul>
+        <li>Oversaw and assisted in managing event workflows to ensure smooth execution.</li>
+        <li>Provided guidance and support to first-year students by resolving their inquiries and concerns.</li>
+        <li>Collaborated with the association president to handle administrative tasks and overall organizational affairs.</li>
+      </ul>
+    </li>
+  </ul>
 
-- ESG Financing: Citizen Power Plant 全民電廠
-- Backtesting VaR and ES under Basel III
-- Financial Derivatives
-- xAI in Credit Scoring
-- Network-Based Systemic Risk of Taiwan
+  <hr />
 
----
-
-## 🎓 Academic Positions
-
-### National Yang Ming Chiao Tung University ([NYCU](https://www.nycu.edu.tw/))
-- Professor, [Department of Information Management and Finance](https://imf.nctu.edu.tw/) (Aug 2024 - Present)
-- Associate Professor, Department of Information Management and Finance (Feb 2017 - July 2024)
-- Joint Appointment, [Department of Applied Mathematics](https://www.math.nycu.edu.tw/) (Sep 2017 - Present)
-- Joint Appointment, [Institute of Statistics](https://stat.nycu.edu.tw/) (Oct 2024 - Present)
-
-### National Central University ([NCU](https://www.ncu.edu.tw/))
-- Associate Professor, [Graduate Institute of Statistics](http://www.stat.ncu.edu.tw/) (Aug 2016 - Jan 2017)
-- Assistant Professor, Graduate Institute of Statistics (Aug 2010 - Jul 2016)
-- Joint Appointment, [Department of Finance](https://fm.mgt.ncu.edu.tw/zh-TW) (Aug 2016 - Jan 2017)
-
-### Other Institutions
-- Experienced Researcher, [IDA Institute of Digital Assets](https://ida.ase.ro) (Apr 2024 - Dec 2024)
-- Visiting Scholar, [Humboldt-Universität zu Berlin](https://www.hu-berlin.de/en), Germany (2011, 2012, 2023)
-
----
-
-## 🎓 Education
-
-### The Pennsylvania State University ([PSU](https://www.psu.edu/))
-
-- Ph.D. in Statistics (2010)  
-  - Adviser: [Prof. John Liechty](http://www.personal.psu.edu/faculty/j/c/jcl12/)  
-  - Dissertation: *Bayesian Nonparametric Approaches for Financial Option Pricing*
-
-### National Taiwan University ([NTU](https://www.ntu.edu.tw/))
-- MBA in Finance (2004)  
-  - Adviser: [Prof. Yuh-Dauh Lyuu](https://www.csie.ntu.edu.tw/~lyuu/)  
-  - Thesis: *On Pricing Rainbow Options*
-- BS in Mathematics (2001)
-
-### Other Institutions
-
-- Exchange Student, [Johannes Kepler University, Austria](https://www.jku.at) (Aug 1999 - Jan 2000)
-
----
-
-## 📚 Additional Resources
-📄 [Publications](https://venteng.github.io/Publication.html)  
-👩‍🏫 [Lab Recruitment 實驗室夥伴招募](https://venteng.github.io/LAB_Recruitment/README.html)  
-👨‍🎓 [Students](https://venteng.github.io/LAB_Recruitment/Students.html)  
-📖 [Teaching](https://venteng.github.io/Teaching/README.html)  
-💡 [Thoughts & Insights](https://venteng.github.io/thoughts/README.html)  
-🌏 [Map, Food, Smiles](https://venteng.github.io/MFS.html)
-
----
+  <!-- Key Skills -->
+  <h3>🌐 <strong>💡 Key Skills</strong></h3>
+  <ul>
+    <li>💻 <strong>Technical Skills:</strong> CMoney, TEJ, R, Python, SQL</li>
+    <li>📢 <strong>Languages:</strong> Native in Mandarin, Fluent in English (TOEIC: 845)</li>
+    <li>📈 <strong>Financial License:</strong> Basic Test on Financial Markets and Professional Ethics (Passed:2022)</li>
+    <li>🧩 <strong>Soft Skills:</strong> Problem-Solving, Cross-Functional Collaboration, Leadership.</li>
+  </ul>
+</body>
+</html>
