--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <!-- 主標題 -->
-  <h1>Chia-Hung Lu 盧家宏</h1>
+  <h1>Chia-Hung Lu 簡夢萱</h1>
 
   <!-- 置中顯示圖片 -->
   <p align="center">
@@ -19,7 +19,7 @@
   </p>
 
   <!-- 簡介 -->
-  <h3>👋 Hi there, I'm David LU</h3>
+  <h3>👋 Hi there, I'm Eden Chien</h3>
   <p>
     💡 <strong>A Master’s student in Management Science with three months of AML Associate experience, 
     possessing a solid background in finance, with proven leadership through multiple student association 
