--- a/index.html
+++ b/index.html
@@ -1,122 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>DavidLu.github.io</title>
-</head>
-<body>
-  <!-- 主標題 -->
-  <h1>Chia-Hung Lu 簡夢萱</h1>
+---
+layout: home
+title: "Welcome to My Site"
+---
 
-  <!-- 置中顯示圖片 -->
-  <p align="center">
-    <img 
-      src="https://github.com/user-attachments/assets/140f18cf-8123-4820-912a-807803b69bd5" 
-      width="200" 
-      height="280" 
-      alt="Profile Photo"
-    />
-  </p>
+# Hello, I'm Chihling!
 
-  <!-- 簡介 -->
-  <h3>👋 Hi there, I'm Eden Chien</h3>
-  <p>
-    💡 <strong>A Master’s student in Management Science with three months of AML Associate experience, 
-    possessing a solid background in finance, with proven leadership through multiple student association 
-    roles and focusing on financial analysis and problem-solving capabilities.</strong>
-  </p>
+Welcome to my personal website. Here, I share my research and projects.
 
-  <p>💻 <strong>Technical Skills:</strong> CMoney , TEJ, R, basic Python, SQL.</p>
-  <p>🏦 <strong>Experience:</strong> Anti Money Laundering Associate.</p>
-  <hr />
+---
 
-  <!-- Work Experience -->
-  <h3>🌟 <strong>💼 Work Experience</strong></h3>
-  <ul>
-    <li>
-      🏦 <strong>BNP Paribas Cardif Anti Money Laundering Associate</strong> (2024.05 - 2024.08)
-      <ul>
-        <li>
-          Focused on name list screening and completed analysis of match results for 10,000 customer profiles, 
-          encompassing various customer types—including politically exposed persons (PEPs) and adverse media— 
-          to identify high-risk individuals during customer identification and verification(CIDV) to prevent 
-          financial crime.
-        </li>
-        <li>
-          Applied rules-based dispositioning to eliminate clear false matches and identify both true and 
-          potential matches, leveraging structured and unstructured data and accurately matching of 
-          the information to specific individuals for further analysis.
-        </li>
-        <li>
-          Analyzed match results and escalated potential true hits to Level 2 analysts for further investigation, 
-          effectively reducing compliance risks.
-        </li>
-        <li>
-          Collaborated with team experts to conduct in-depth analyses of diverse, highly complex cases, 
-          ensuring adherence to global financial institution standards.
-        </li>
-      </ul>
-    </li>
-  </ul>
+## About Me
 
-  <hr />
-  
-  <!-- Coursework Achievements -->
-  <h3>🌟 <strong>📃 Coursework Achievements</strong></h3>
-  <ul>
-    <li>
-      🏦 <strong>Investment and Corporate Finance Program </strong> (2021.09 - 2023.06)
-      <ul>
-        <li>
-          Evaluated the merger between Fubon Financial Holding and Jih Sun Financial Holding, focusing on
-          potential synergies and overall impact.
-        </li>
-        <li>
-          Performed a sample analysis in Excel to identify key factors influencing TSMC’s Return on Equity (ROE).
-        </li>
-        <li>
-          Compared and examined ECLAT (儒鴻) and MAKALOT (聚陽) financial statements and ratios to provide
-          informed investment recommendations.
-        </li>
-      </ul>
-    </li>
-  </ul>
+Hello! I am **Chihling Lo**, currently pursuing a **Master's degree in Financial Engineering at National Yang Ming Chiao Tung University**.
 
-  <hr />
+<img src="https://github.com/user-attachments/assets/a3ace08f-0d22-497f-8e94-94d1ab3244f5" alt="Profile Picture" width="200">
 
-  <!-- Leadership and Volunteer Experience-->
-  <h3>🌟 <strong>🎯 Leadership and Volunteer Experience</strong></h3>
-  <ul>
-    <li>
-      <strong>President of NYCU IMS Student Association</strong> (2024.09 – 2025.09)
-      <ul>
-        <li>
-          Orchestrate and lead a team of 3 members to successfully execute 4 major events, respectively are final dinner party, 
-          admission information session, graduation ceremony of institution, and welcome party, achieving more than 80% of students participated.
-        </li>
-        <li>Serve as a mediator of communication between the faculties and students to ensure students’ concerns were effectively communicated.</li>
-      </ul>
-    </li>
-    <br />
-    <li>
-      <strong>Vice President of YZU International Business Student Association</strong> (2020.05 - 2021.05)
-      <ul>
-        <li>Oversaw and assisted in managing event workflows to ensure smooth execution.</li>
-        <li>Provided guidance and support to first-year students by resolving their inquiries and concerns.</li>
-        <li>Collaborated with the association president to handle administrative tasks and overall organizational affairs.</li>
-      </ul>
-    </li>
-  </ul>
 
-  <hr />
+### Education
+- **National Yang Ming Chiao Tung University (NYCU)** – Department of Information Management and Finance, Financial Engineering Program (2024 - Present)
+- **National Chengchi University (NCCU)** – Department of Applied Mathematics (2020 - 2024)
+- **Taichung Girls' Senior High School(TCGS)** (2017 - 2020)
 
-  <!-- Key Skills -->
-  <h3>🌐 <strong>💡 Key Skills</strong></h3>
-  <ul>
-    <li>💻 <strong>Technical Skills:</strong> CMoney, TEJ, R, Python, SQL</li>
-    <li>📢 <strong>Languages:</strong> Native in Mandarin, Fluent in English (TOEIC: 845)</li>
-    <li>📈 <strong>Financial License:</strong> Basic Test on Financial Markets and Professional Ethics (Passed:2022)</li>
-    <li>🧩 <strong>Soft Skills:</strong> Problem-Solving, Cross-Functional Collaboration, Leadership.</li>
-  </ul>
-</body>
-</html>
+### Research Interests
+- Employee Stock Options
+
+### Technical Skills
+#### Mathematical Statistics
+- Advanced Calculus, Discrete Mathematics, Differential Equations, Numerical Analysis, Operations Research, Mathematical Statistics
+
+#### Financial Engineering
+- Financial Mathematics, Numerical Methods in Finance, Stochastic Calculus, Econometrics, Derivatives
+
+#### Programming
+- Python, MATLAB, R, SAS
+
+---
+
+## Research Projects
+### Shin-Kong Insurance Sales Agent Misuse Detection Project (2023)
+- **Research Method**: Applied machine learning techniques to analyze datasets provided by Shin Kong Life Insurance, identifying key characteristics of agents involved in fund misappropriation. The findings contributed to developing routine audit plans to protect the company's reputation and assets.
+
+---
+
+## Contact Information
+- **GitHub**: [chihling830](https://github.com/chihling830)
+- **Phone**: 0905-111-130
+- **Email**: [irene91083@gmail.com](mailto:irene91083@gmail.com)
