--- a/index.html
+++ b/index.html
@@ -15,34 +15,55 @@ Hello! I am **Chihling Lo**, currently pursuing a **Master's degree in Financial
 
 <img src="https://github.com/user-attachments/assets/a3ace08f-0d22-497f-8e94-94d1ab3244f5" alt="Profile Picture" width="200">
 
-
 ### Education
+
 - **National Yang Ming Chiao Tung University (NYCU)** – Department of Information Management and Finance, Financial Engineering Program (2024 - Present)
 - **National Chengchi University (NCCU)** – Department of Applied Mathematics (2020 - 2024)
-- **Taichung Girls' Senior High School(TCGS)** (2017 - 2020)
+- **Taichung Girls' Senior High School (TCGS)** (2017 - 2020)
 
 ### Research Interests
+
 - Employee Stock Options
 
 ### Technical Skills
+
 #### Mathematical Statistics
-- Advanced Calculus, Discrete Mathematics, Differential Equations, Numerical Analysis, Operations Research, Mathematical Statistics
+
+- Advanced Calculus
+- Discrete Mathematics
+- Differential Equations
+- Numerical Analysis
+- Operations Research
+- Mathematical Statistics
 
 #### Financial Engineering
-- Financial Mathematics, Numerical Methods in Finance, Stochastic Calculus, Econometrics, Derivatives
+
+- Financial Mathematics
+- Numerical Methods in Finance
+- Stochastic Calculus
+- Econometrics
+- Derivatives
 
 #### Programming
-- Python, MATLAB, R, SAS
+
+- Python
+- MATLAB
+- R
+- SAS
 
 ---
 
 ## Research Projects
+
 ### Shin-Kong Insurance Sales Agent Misuse Detection Project (2023)
-- **Research Method**: Applied machine learning techniques to analyze datasets provided by Shin Kong Life Insurance, identifying key characteristics of agents involved in fund misappropriation. The findings contributed to developing routine audit plans to protect the company's reputation and assets.
+
+- **Research Method**: Applied machine learning techniques to analyze datasets provided by Shin Kong Life Insurance, identifying key characteristics of agents involved in fund misappropriation. 
+- **Outcome**: The findings contributed to developing routine audit plans to protect the company's reputation and assets.
 
 ---
 
 ## Contact Information
+
 - **GitHub**: [chihling830](https://github.com/chihling830)
 - **Phone**: 0905-111-130
 - **Email**: [irene91083@gmail.com](mailto:irene91083@gmail.com)
