--- a/index.html
+++ b/index.html
@@ -5,51 +5,49 @@ title: "Welcome to My Site"
 
 # Hello, I'm Chihling!
 
-Welcome to my personal website. Here, I share my research and projects.
+Welcome to my personal website.<br>
+Here, I share my research and projects.
 
 ---
 
 ## About Me
 
-Hello! I am **Chihling Lo**, currently pursuing a **Master's degree in Financial Engineering at National Yang Ming Chiao Tung University**.
+Hello! I am **Chihling Lo**, currently pursuing a **Master's degree in Financial Engineering at National Yang Ming Chiao Tung University**.<br>
 
 <img src="https://github.com/user-attachments/assets/a3ace08f-0d22-497f-8e94-94d1ab3244f5" alt="Profile Picture" width="200">
 
 ### Education
 
-- **National Yang Ming Chiao Tung University (NYCU)** – Department of Information Management and Finance, Financial Engineering Program (2024 - Present)
-- **National Chengchi University (NCCU)** – Department of Applied Mathematics (2020 - 2024)
-- **Taichung Girls' Senior High School (TCGS)** (2017 - 2020)
+- **National Yang Ming Chiao Tung University (NYCU)** – Department of Information Management and Finance, Financial Engineering Program (2024 - Present)<br>
+- **National Chengchi University (NCCU)** – Department of Applied Mathematics (2020 - 2024)<br>
+- **Taichung Girls' Senior High School (TCGS)** (2017 - 2020)<br>
 
 ### Research Interests
 
-- Employee Stock Options
+- Employee Stock Options<br>
 
 ### Technical Skills
 
 #### Mathematical Statistics
-
-- Advanced Calculus
-- Discrete Mathematics
-- Differential Equations
-- Numerical Analysis
-- Operations Research
-- Mathematical Statistics
+- Advanced Calculus<br>
+- Discrete Mathematics<br>
+- Differential Equations<br>
+- Numerical Analysis<br>
+- Operations Research<br>
+- Mathematical Statistics<br>
 
 #### Financial Engineering
-
-- Financial Mathematics
-- Numerical Methods in Finance
-- Stochastic Calculus
-- Econometrics
-- Derivatives
+- Financial Mathematics<br>
+- Numerical Methods in Finance<br>
+- Stochastic Calculus<br>
+- Econometrics<br>
+- Derivatives<br>
 
 #### Programming
-
-- Python
-- MATLAB
-- R
-- SAS
+- Python<br>
+- MATLAB<br>
+- R<br>
+- SAS<br>
 
 ---
 
@@ -57,13 +55,13 @@ Hello! I am **Chihling Lo**, currently pursuing a **Master's degree in Financial
 
 ### Shin-Kong Insurance Sales Agent Misuse Detection Project (2023)
 
-- **Research Method**: Applied machine learning techniques to analyze datasets provided by Shin Kong Life Insurance, identifying key characteristics of agents involved in fund misappropriation. 
-- **Outcome**: The findings contributed to developing routine audit plans to protect the company's reputation and assets.
+- **Research Method**: Applied machine learning techniques to analyze datasets provided by Shin Kong Life Insurance, identifying key characteristics of agents involved in fund misappropriation.<br>
+- **Outcome**: The findings contributed to developing routine audit plans to protect the company's reputation and assets.<br>
 
 ---
 
 ## Contact Information
 
-- **GitHub**: [chihling830](https://github.com/chihling830)
-- **Phone**: 0905-111-130
-- **Email**: [irene91083@gmail.com](mailto:irene91083@gmail.com)
+- **GitHub**: [chihling830](https://github.com/chihling830)<br>
+- **Phone**: 0905-111-130<br>
+- **Email**: [irene91083@gmail.com](mailto:irene91083@gmail.com)<br>
