--- a/index.html
+++ b/index.html
@@ -3,6 +3,52 @@ layout: home
 title: "Welcome to My Site"
 ---
 
+<style>
+body {
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    background-color: #f9f9f9;
+    color: #333;
+    margin: 20px;
+    padding: 0;
+}
+.container {
+    max-width: 800px;
+    margin: auto;
+    background: #ffffff;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+}
+h1, h2, h3 {
+    color: #2c3e50;
+}
+img {
+    display: block;
+    margin: 20px auto;
+    border-radius: 10px;
+    max-width: 100%;
+}
+ul {
+    list-style: none;
+    padding: 0;
+}
+ul li::before {
+    content: '✔';
+    color: #3498db;
+    margin-right: 10px;
+}
+a {
+    color: #3498db;
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: underline;
+}
+</style>
+
+<div class="container">
+
 # Hello, I'm Chihling!
 
 Welcome to my personal website.  
@@ -18,9 +64,9 @@ Hello! I am **Chihling Lo**, currently pursuing a **Master's degree in Financial
 
 ### Education
 
-- **National Yang Ming Chiao Tung University (NYCU)** – Department of Information Management and Finance, Financial Engineering Program (2024 - Present)
-- **National Chengchi University (NCCU)** – Department of Applied Mathematics (2020 - 2024)
-- **Taichung Girls' Senior High School (TCGS)** (2017 - 2020)
+- **National Yang Ming Chiao Tung University (NYCU)** – Department of Information Management and Finance, Financial Engineering Program (2024 - Present)  
+- **National Chengchi University (NCCU)** – Department of Applied Mathematics (2020 - 2024)  
+- **Taichung Girls' Senior High School (TCGS)** (2017 - 2020)  
 
 ### Research Interests
 
@@ -68,3 +114,5 @@ Hello! I am **Chihling Lo**, currently pursuing a **Master's degree in Financial
 - **GitHub**: [chihling830](https://github.com/chihling830)  
 - **Phone**: 0905-111-130  
 - **Email**: [irene91083@gmail.com](mailto:irene91083@gmail.com)
+
+</div>
