--- a/index.html
+++ b/index.html
@@ -1,118 +1,60 @@
----
-layout: home
-title: "Welcome to My Site"
----
+# 簡夢萱
 
-<style>
-body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    background-color: #f9f9f9;
-    color: #333;
-    margin: 20px;
-    padding: 0;
-}
-.container {
-    max-width: 800px;
-    margin: auto;
-    background: #ffffff;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-}
-h1, h2, h3 {
-    color: #2c3e50;
-}
-img {
-    display: block;
-    margin: 20px auto;
-    border-radius: 10px;
-    max-width: 100%;
-}
-ul {
-    list-style: none;
-    padding: 0;
-}
-ul li::before {
-    content: '✔';
-    color: #3498db;
-    margin-right: 10px;
-}
-a {
-    color: #3498db;
-    text-decoration: none;
-}
-a:hover {
-    text-decoration: underline;
-}
-</style>
-
-<div class="container">
-
-# Hello, I'm Chihling!
-
-Welcome to my personal website.  
-Here, I share my research and projects.
+🎂 **1997年07月15日**  
+🔍 **研究方向**：  
+- 博弈分析&資金盤模式之影響  
+- 銀行數據管理之方式探討—應授分流或集中式管理 等  
 
 ---
 
-## About Me
-
-Hello! I am **Chihling Lo**, currently pursuing a **Master's degree in Financial Engineering at National Yang Ming Chiao Tung University**.
-
-![Profile Picture](https://github.com/user-attachments/assets/a3ace08f-0d22-497f-8e94-94d1ab3244f5)
-
-### Education
-
-- **National Yang Ming Chiao Tung University (NYCU)** – Department of Information Management and Finance, Financial Engineering Program (2024 - Present)  
-- **National Chengchi University (NCCU)** – Department of Applied Mathematics (2020 - 2024)  
-- **Taichung Girls' Senior High School (TCGS)** (2017 - 2020)  
-
-### Research Interests
-
-- Employee Stock Options
-
-### Technical Skills
-
-#### Mathematical Statistics
-
-- Advanced Calculus  
-- Discrete Mathematics  
-- Differential Equations  
-- Numerical Analysis  
-- Operations Research  
-- Mathematical Statistics  
-
-#### Financial Engineering
-
-- Financial Mathematics  
-- Numerical Methods in Finance  
-- Stochastic Calculus  
-- Econometrics  
-- Derivatives  
-
-#### Programming
-
-- Python  
-- MATLAB  
-- R  
-- SAS  
+## 📌 個人資料
+- 📞 0922-632-532  
+- 📧 sallycms715@gmail.com  
+- 📍 彩化大智路8巷10號  
 
 ---
 
-## Research Projects
-
-### Shin-Kong Insurance Sales Agent Misuse Detection Project (2023)
-
-- **Research Method**: Applied machine learning techniques to analyze datasets provided by Shin Kong Life Insurance, identifying key characteristics of agents involved in fund misappropriation.  
-- **Outcome**: The findings contributed to developing routine audit plans to protect the company's reputation and assets.
+## 🎓 學歷
+- **輔仁大學** 會計系&精算社會學系 (2015/9 - 2020/1)  
+- **彩化大智中學** (2012/9 - 2015/6)  
 
 ---
 
-## Contact Information
+## 🏆 證照
+- 111年度中華採購暨供應人員資格考試 **採購與供應管理證照**  
+- **TOEIC 785**  
 
-- **GitHub**: [chihling830](https://github.com/chihling830)  
-- **Phone**: 0905-111-130  
-- **Email**: [irene91083@gmail.com](mailto:irene91083@gmail.com)
+---
 
-</div>
+## 💼 工作經歷
+
+### **中信銀行 - 財務分析人員**
+📅 2022/9 ~ 迄今（2024/2 轉職）
+
+- 擔任信託同業/債信金融/數據研發部門之財務分析人員  
+- 負責以下職務：
+  - 經濟數據&風險意識查核及未來預估(大約3.6個財務決策)
+  - 信貸資金管理機制應用工程建置與測試  
+  - 客群洞察分析，整理財務數據  
+- **專案負責**：
+  - 針對 **內部審查與金融報告制式化**，帶領數據研發部門進行「票面不符案件篩選」，並生成AI自動比對點差誤判案例  
+
+---
+
+### **KPMG - 審計組長**
+📅 2020/9 ~ 2022/9
+
+- 負責**台幣40億綜合公司查核**、**年收約300億大型轉投資公司**之主要組長人員  
+- 工作內容：
+  - 財報查核（應收、負債、損益、稅務）
+  - 審計政策制定與執行  
+  - 帶領10人團隊進行外部資料查核及客戶報告準備  
+  - 與法務及公司財務主管進行對接  
+- **專案負責**：
+  - 協作並推行公司財報「數據一致性」建議案，並導入整合政策  
+
+---
+
+## 🛠 技能
+- **辦公軟體**：Excel, PowerPoint, Word, Access  
+- **數據分析**：Python, SQL  
