--- a/index.html
+++ b/index.html
@@ -1,59 +1,31 @@
-# 簡夢萱
+---
+layout: home
+title: "Welcome to My Site"
+---
 
-🎂 **1997年07月15日**  
-🔍 **研究方向**：  
-- 博弈分析&資金盤模式之影響  
-- 銀行數據管理之方式探討—應授分流或集中式管理 等  
+# Hello, I'm Eden!
+
+Welcome to my personal website. Here, I share my research and projects.
 
 ---
 
-## 📌 個人資料
-- 📞 0922-632-532  
-- 📧 sallycms715@gmail.com  
-- 📍 彩化大智路8巷10號  
+## About Me
+
+Hello! I am **Eden Chien**
+
+
+
+### Education
+- **National Yang Ming Chiao Tung University (NYCU)** – Department of Information Management and Finance (2024 - Present)
+- **National Chengchi University (NCCU)** – Department of Applied Mathematics (2020 - 2024)
+- **Taichung Girls' Senior High School(TCGS)** (2017 - 2020)
+
+#### Programming
+- Python, MATLAB, R, SAS
 
 ---
 
-## 🎓 學歷
-- **輔仁大學** 會計系&精算社會學系 (2015/9 - 2020/1)  
-- **彩化大智中學** (2012/9 - 2015/6)  
-
----
-
-## 🏆 證照
-- 111年度中華採購暨供應人員資格考試 **採購與供應管理證照**  
--
----
-
-## 💼 工作經歷
-
-### **中信銀行 - 財務分析人員**
-📅 2022/9 ~ 迄今（2024/2 轉職）
-
-- 擔任信託同業/債信金融/數據研發部門之財務分析人員  
-- 負責以下職務：
-  - 經濟數據&風險意識查核及未來預估(大約3.6個財務決策)
-  - 信貸資金管理機制應用工程建置與測試  
-  - 客群洞察分析，整理財務數據  
-- **專案負責**：
-  - 針對 **內部審查與金融報告制式化**，帶領數據研發部門進行「票面不符案件篩選」，並生成AI自動比對點差誤判案例  
-
----
-
-### **KPMG - 審計組長**
-📅 2020/9 ~ 2022/9
-
-- 負責**台幣40億綜合公司查核**、**年收約300億大型轉投資公司**之主要組長人員  
-- 工作內容：
-  - 財報查核（應收、負債、損益、稅務）
-  - 審計政策制定與執行  
-  - 帶領10人團隊進行外部資料查核及客戶報告準備  
-  - 與法務及公司財務主管進行對接  
-- **專案負責**：
-  - 協作並推行公司財報「數據一致性」建議案，並導入整合政策  
-
----
-
-## 🛠 技能
-- **辦公軟體**：Excel, PowerPoint, Word, Access  
-- **數據分析**：Python, SQL  
+## Contact Information
+- **GitHub**: [edencmh](https://github.com/edencmh)
+- **Phone**: 0922-632-532
+- **Email**: [sallycms715@gmail.com](mailto: sallycms715@gmail.com)
