--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
----
-layout: home
-title: "Welcome to My Site"
----
-
-# Hello, I'm Eden!
-
+# 👋 Hello, I'm Eden!  
 Welcome to my personal website. Here, I share my research and projects.
 
 ---
 
-## About Me
-
-Hello! I am **Eden Chien**
-
-
-
-### Education
-- **National Yang Ming Chiao Tung University (NYCU)** – Department of Information Management and Finance (2024 - Present)
-- **National Chengchi University (NCCU)** – Department of Applied Mathematics (2020 - 2024)
-- **Taichung Girls' Senior High School(TCGS)** (2017 - 2020)
-
-#### Programming
-- Python, MATLAB, R, SAS
+## 📌 About Me  
+Hello! I am **Eden Chien**.
 
 ---
 
-## Contact Information
-- **GitHub**: [edencmh](https://github.com/edencmh)
-- **Phone**: 0922-632-532
-- **Email**: [sallycms715@gmail.com](mailto: sallycms715@gmail.com)
+## 🎓 Education  
+- **National Yang Ming Chiao Tung University (NYCU)**  
+  *Department of Information Management and Finance* (2024 - Present)  
+- **National Chengchi University (NCCU)**  
+  *Department of Applied Mathematics* (2020 - 2024)  
+- **Taichung Girls' Senior High School (TCGS)** (2017 - 2020)  
+
+---
+
+## 💻 Programming Skills  
+- Python 🐍  
+- MATLAB 📊  
+- R 📈  
+- SAS 📉  
+
+---
+
+## 📬 Contact Information  
+- **GitHub**: [🌐 edencmh](https://github.com/edencmh)  
+- **Phone**: 📞 0922-632-532  
+- **Email**: 📧 [sallycms715@gmail.com](mailto:sallycms715@gmail.com)  
