--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 # 👋 Hello, I'm Eden!  
-Welcome to my personal website. Here, I share my research and projects.
+Welcome to my personal website. Here, I share my research and projects.  
 
 ---
 
 ## 📌 About Me  
-Hello! I am **Eden Chien**.
+Hello! I am **Eden Chien**.  
 
 ---
 
@@ -18,10 +18,10 @@ Hello! I am **Eden Chien**.
 ---
 
 ## 💻 Programming Skills  
-- Python 🐍  
-- MATLAB 📊  
-- R 📈  
-- SAS 📉  
+- **Python** 🐍  
+- **MATLAB** 📊  
+- **R** 📈  
+- **SAS** 📉  
 
 ---
 
