--- a/index.html
+++ b/index.html
@@ -1,31 +1,70 @@
-# 👋 Hello, I'm Eden!  
-Welcome to my personal website. Here, I share my research and projects.  
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Eden Chien - Personal Website</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 40px auto;
+            max-width: 800px;
+            padding: 20px;
+            background-color: #f4f4f4;
+        }
+        h1, h2, h3 {
+            color: #333;
+        }
+        .section {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
+        }
+        ul {
+            padding-left: 20px;
+        }
+    </style>
+</head>
+<body>
 
----
+    <h1>👋 Hello, I'm Eden!</h1>
+    <p>Welcome to my personal website. Here, I share my research and projects.</p>
 
-## 📌 About Me  
-Hello! I am **Eden Chien**.  
+    <div class="section">
+        <h2>📌 About Me</h2>
+        <p>Hello! I am <strong>Eden Chien</strong>.</p>
+    </div>
 
----
+    <div class="section">
+        <h2>🎓 Education</h2>
+        <ul>
+            <li><strong>National Yang Ming Chiao Tung University (NYCU)</strong> – Department of Information Management and Finance (2024 - Present)</li>
+            <li><strong>National Chengchi University (NCCU)</strong> – Department of Applied Mathematics (2020 - 2024)</li>
+            <li><strong>Taichung Girls' Senior High School (TCGS)</strong> (2017 - 2020)</li>
+        </ul>
+    </div>
 
-## 🎓 Education  
-- **National Yang Ming Chiao Tung University (NYCU)**  
-  *Department of Information Management and Finance* (2024 - Present)  
-- **National Chengchi University (NCCU)**  
-  *Department of Applied Mathematics* (2020 - 2024)  
-- **Taichung Girls' Senior High School (TCGS)** (2017 - 2020)  
+    <div class="section">
+        <h2>💻 Programming Skills</h2>
+        <ul>
+            <li>🐍 Python</li>
+            <li>📊 MATLAB</li>
+            <li>📈 R</li>
+            <li>📉 SAS</li>
+        </ul>
+    </div>
 
----
+    <div class="section">
+        <h2>📬 Contact Information</h2>
+        <ul>
+            <li>🌐 <strong>GitHub</strong>: <a href="https://github.com/edencmh" target="_blank">edencmh</a></li>
+            <li>📞 <strong>Phone</strong>: 0922-632-532</li>
+            <li>📧 <strong>Email</strong>: <a href="mailto:sallycms715@gmail.com">sallycms715@gmail.com</a></li>
+        </ul>
+    </div>
 
-## 💻 Programming Skills  
-- **Python** 🐍  
-- **MATLAB** 📊  
-- **R** 📈  
-- **SAS** 📉  
-
----
-
-## 📬 Contact Information  
-- **GitHub**: [🌐 edencmh](https://github.com/edencmh)  
-- **Phone**: 📞 0922-632-532  
-- **Email**: 📧 [sallycms715@gmail.com](mailto:sallycms715@gmail.com)  
+</body>
+</html>
