--- a/index.html
+++ b/index.html
@@ -4,67 +4,83 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eden Chien - Personal Website</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <style>
         body {
             font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 40px auto;
+            background-color: #f8f9fa;
+        }
+        .container {
             max-width: 800px;
-            padding: 20px;
-            background-color: #f4f4f4;
-        }
-        h1, h2, h3 {
-            color: #333;
-        }
-        .section {
             background: white;
             padding: 20px;
             border-radius: 10px;
-            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-            margin-bottom: 20px;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+            margin-top: 20px;
         }
-        ul {
-            padding-left: 20px;
+        h1, h2, h3 {
+            color: #343a40;
+        }
+        .profile-img {
+            display: block;
+            margin: 0 auto;
+            width: 150px;
+            border-radius: 50%;
         }
     </style>
 </head>
 <body>
+    <div class="container mt-4">
+        <h1 class="text-center">👋 Hello, I'm Eden Chien</h1>
+        <p class="text-center">Welcome to my personal website.</p>
+        
+        <hr>
 
-    <h1>👋 Hello, I'm Eden!</h1>
-    <p>Welcome to my personal website. Here, I share my research and projects.</p>
-
-    <div class="section">
         <h2>📌 About Me</h2>
-        <p>Hello! I am <strong>Eden Chien</strong>.</p>
-    </div>
+        <img src="https://github.com/user-attachments/assets/c218196a-17f7-4d06-8765-daa8d20c9b0b" alt="Profile Image" class="profile-img">
+        
+        <hr>
 
-    <div class="section">
+        <h2>🎓 Work Experience</h2>
+        <ul>
+            <li><strong>CTBC Bank Co., Ltd.</strong> - <em>Financial Analyst</em> (2022 - 2024)</li>
+            <li><strong>KPMG</strong> - <em>Senior Auditor</em> (2020 - 2022)</li>
+        </ul>
+
         <h2>🎓 Education</h2>
         <ul>
-            <li><strong>National Yang Ming Chiao Tung University (NYCU)</strong> – Department of Information Management and Finance (2024 - Present)</li>
-            <li><strong>National Chengchi University (NCCU)</strong> – Department of Applied Mathematics (2020 - 2024)</li>
-            <li><strong>Taichung Girls' Senior High School (TCGS)</strong> (2017 - 2020)</li>
+            <li><strong>National Yang Ming Chiao Tung University (NYCU)</strong> - Information Management and Finance (2024 - Present)</li>
+            <li><strong>Fu Jen Catholic University (FJU)</strong> - Accounting & Sociology (2015 - 2020)</li>
+            <li><strong>Changhua Girls' Senior High School (CHGSH)</strong> (2012 - 2015)</li>
         </ul>
-    </div>
 
-    <div class="section">
+        <h2>🏆 Competitions</h2>
+        <ul>
+            <li><strong>Deloitte China Tax Elite Challenge</strong> - Third place (72 teams) (2019)</li>
+            <li><strong>Deloitte Taiwan Tax Elite Challenge</strong> - Fifth place (22 teams) (2019)</li>
+        </ul>
+
+        <h2>📜 License & Certification</h2>
+        <ul>
+            <li>Certified Public Accountant (CPA)</li>
+        </ul>
+
         <h2>💻 Programming Skills</h2>
         <ul>
-            <li>🐍 Python</li>
-            <li>📊 MATLAB</li>
-            <li>📈 R</li>
-            <li>📉 SAS</li>
+            <li>Python 🐍</li>
+            <li>MATLAB 📊</li>
+            <li>R 📈</li>
+            <li>SAS 📉</li>
         </ul>
-    </div>
 
-    <div class="section">
         <h2>📬 Contact Information</h2>
         <ul>
-            <li>🌐 <strong>GitHub</strong>: <a href="https://github.com/edencmh" target="_blank">edencmh</a></li>
-            <li>📞 <strong>Phone</strong>: 0922-632-532</li>
-            <li>📧 <strong>Email</strong>: <a href="mailto:sallycms715@gmail.com">sallycms715@gmail.com</a></li>
+            <li>GitHub: <a href="https://github.com/edencmh" target="_blank">🌐 edencmh</a></li>
+            <li>Email: <a href="mailto:sallycms715@gmail.com">sallycms715@gmail.com</a></li>
+            <li>Phone: 📞 <em>Available upon request</em></li>
         </ul>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
