--- a/index.html
+++ b/index.html
@@ -11,76 +11,59 @@
             background-color: #f8f9fa;
         }
         .container {
-            max-width: 800px;
+            max-width: 750px;
+            margin: 30px auto;
+        }
+        .card {
             background: white;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-            margin-top: 20px;
+            margin-bottom: 20px;
         }
-        h1, h2, h3 {
-            color: #343a40;
+        h1 {
+            font-size: 28px;
+            font-weight: bold;
+            text-align: center;
+            margin-bottom: 15px;
         }
-        .profile-img {
-            display: block;
-            margin: 0 auto;
-            width: 150px;
-            border-radius: 50%;
+        .section-title {
+            font-size: 20px;
+            font-weight: bold;
+            margin-bottom: 10px;
         }
     </style>
 </head>
 <body>
-    <div class="container mt-4">
-        <h1 class="text-center">👋 Hello, I'm Eden Chien</h1>
-        <p class="text-center">Welcome to my personal website.</p>
-        
-        <hr>
 
-        <h2>📌 About Me</h2>
-        <img src="https://github.com/user-attachments/assets/c218196a-17f7-4d06-8765-daa8d20c9b0b" alt="Profile Image" class="profile-img">
-        
-        <hr>
+    <div class="container">
+        <h1>👋 Hello, I'm Eden!</h1>
+        <p class="text-center">Welcome to my personal website. Here, I share my research and projects.</p>
 
-        <h2>🎓 Work Experience</h2>
-        <ul>
-            <li><strong>CTBC Bank Co., Ltd.</strong> - <em>Financial Analyst</em> (2022 - 2024)</li>
-            <li><strong>KPMG</strong> - <em>Senior Auditor</em> (2020 - 2022)</li>
-        </ul>
+        <div class="card">
+            <h2 class="section-title">📌 About Me</h2>
+            <p>Hello! I am <strong>Eden Chien</strong>.</p>
+        </div>
 
-        <h2>🎓 Education</h2>
-        <ul>
-            <li><strong>National Yang Ming Chiao Tung University (NYCU)</strong> - Information Management and Finance (2024 - Present)</li>
-            <li><strong>Fu Jen Catholic University (FJU)</strong> - Accounting & Sociology (2015 - 2020)</li>
-            <li><strong>Changhua Girls' Senior High School (CHGSH)</strong> (2012 - 2015)</li>
-        </ul>
+        <div class="card">
+            <h2 class="section-title">🎓 Education</h2>
+            <ul>
+                <li><strong>National Yang Ming Chiao Tung University (NYCU)</strong> – Department of Information Management and Finance (2024 - Present)</li>
+                <li><strong>National Chengchi University (NCCU)</strong> – Department of Applied Mathematics (2020 - 2024)</li>
+                <li><strong>Taichung Girls' Senior High School (TCGS)</strong> (2017 - 2020)</li>
+            </ul>
+        </div>
 
-        <h2>🏆 Competitions</h2>
-        <ul>
-            <li><strong>Deloitte China Tax Elite Challenge</strong> - Third place (72 teams) (2019)</li>
-            <li><strong>Deloitte Taiwan Tax Elite Challenge</strong> - Fifth place (22 teams) (2019)</li>
-        </ul>
-
-        <h2>📜 License & Certification</h2>
-        <ul>
-            <li>Certified Public Accountant (CPA)</li>
-        </ul>
-
-        <h2>💻 Programming Skills</h2>
-        <ul>
-            <li>Python 🐍</li>
-            <li>MATLAB 📊</li>
-            <li>R 📈</li>
-            <li>SAS 📉</li>
-        </ul>
-
-        <h2>📬 Contact Information</h2>
-        <ul>
-            <li>GitHub: <a href="https://github.com/edencmh" target="_blank">🌐 edencmh</a></li>
-            <li>Email: <a href="mailto:sallycms715@gmail.com">sallycms715@gmail.com</a></li>
-            <li>Phone: 📞 <em>Available upon request</em></li>
-        </ul>
+        <div class="card">
+            <h2 class="section-title">💻 Programming Skills</h2>
+            <ul>
+                <li>🐍 Python</li>
+                <li>📊 MATLAB</li>
+            </ul>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
