--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
             font-weight: bold;
             margin-bottom: 10px;
         }
+        .profile-img {
+            display: block;
+            margin: 0 auto 15px auto;
+            width: 120px;
+            border-radius: 50%;
+        }
+        ul {
+            padding-left: 20px;
+        }
     </style>
 </head>
 <body>
@@ -46,11 +55,34 @@
         </div>
 
         <div class="card">
+            <h2 class="section-title">🎓 Work Experience</h2>
+            <ul>
+                <li><strong>CTBC Bank Co., Ltd.</strong> - <em>Financial Analyst</em> (2022 - 2024)</li>
+                <li><strong>KPMG</strong> - <em>Senior Auditor</em> (2020 - 2022)</li>
+            </ul>
+        </div>
+
+        <div class="card">
             <h2 class="section-title">🎓 Education</h2>
             <ul>
                 <li><strong>National Yang Ming Chiao Tung University (NYCU)</strong> – Department of Information Management and Finance (2024 - Present)</li>
-                <li><strong>National Chengchi University (NCCU)</strong> – Department of Applied Mathematics (2020 - 2024)</li>
-                <li><strong>Taichung Girls' Senior High School (TCGS)</strong> (2017 - 2020)</li>
+                <li><strong>Fu Jen Catholic University (FJU)</strong> – Accounting & Sociology (2015 - 2020)</li>
+                <li><strong>Changhua Girls' Senior High School (CHGSH)</strong> (2012 - 2015)</li>
+            </ul>
+        </div>
+
+        <div class="card">
+            <h2 class="section-title">🏆 Competitions</h2>
+            <ul>
+                <li><strong>Deloitte China Tax Elite Challenge</strong> - Third place (72 teams) (2019)</li>
+                <li><strong>Deloitte Taiwan Tax Elite Challenge</strong> - Fifth place (22 teams) (2019)</li>
+            </ul>
+        </div>
+
+        <div class="card">
+            <h2 class="section-title">📜 License & Certification</h2>
+            <ul>
+                <li>Certified Public Accountant (CPA)</li>
             </ul>
         </div>
 
@@ -59,6 +91,17 @@
             <ul>
                 <li>🐍 Python</li>
                 <li>📊 MATLAB</li>
+                <li>📈 R</li>
+                <li>📉 SAS</li>
+            </ul>
+        </div>
+
+        <div class="card">
+            <h2 class="section-title">📬 Contact Information</h2>
+            <ul>
+                <li>GitHub: <a href="https://github.com/edencmh" target="_blank">🌐 edencmh</a></li>
+                <li>Email: <a href="mailto:sallycms715@gmail.com">sallycms715@gmail.com</a></li>
+                <li>Phone: 📞 <em>Available upon request</em></li>
             </ul>
         </div>
     </div>
@@ -66,4 +109,3 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
