--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
             display: block;
             margin: 0 auto 15px auto;
             width: 120px;
+            height: 120px;
             border-radius: 50%;
+            object-fit: cover;
         }
         ul {
             padding-left: 20px;
@@ -47,10 +49,11 @@
 
     <div class="container">
         <h1>👋 Hello, I'm Eden!</h1>
-        <p class="text-center">Welcome to my personal website. Here, I share my research and projects.</p>
+        <p class="text-center">Welcome to my personal website. </p>
 
         <div class="card">
             <h2 class="section-title">📌 About Me</h2>
+            <img src="https://github.com/user-attachments/assets/c218196a-17f7-4d06-8765-daa8d20c9b0b" alt="Eden Chien" class="profile-img">
             <p>Hello! I am <strong>Eden Chien</strong>.</p>
         </div>
 
