--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <body>
 
     <div class="container">
-        <h1>👋 Hello, I'm Eden!</h1>
+        <h1>👋 Hello, I'm Eden!I am from Changhua.</h1>
         <p class="text-center">Welcome to my personal website. </p>
 
         <div class="card">
@@ -68,7 +68,7 @@
         <div class="card">
             <h2 class="section-title">🎓 Education</h2>
             <ul>
-                <li><strong>National Yang Ming Chiao Tung University (NYCU)</strong> – Department of Information Management and Finance (2024 - Present)</li>
+                <li><strong>National Yang Ming Chiao Tung University (NYCU)</strong> – Information Management and Finance (2024 - Present)</li>
                 <li><strong>Fu Jen Catholic University (FJU)</strong> – Accounting & Sociology (2015 - 2020)</li>
                 <li><strong>Changhua Girls' Senior High School (CHGSH)</strong> (2012 - 2015)</li>
             </ul>
