--- a/index.html
+++ b/index.html
@@ -48,13 +48,14 @@
 <body>
 
     <div class="container">
-        <h1>👋 Hello, I'm Eden!I am from Changhua.</h1>
-        <p class="text-center">Welcome to my personal website. </p>
+        <h1>👋 Hello, I'm Eden!</h1>
+        <p class="text-center">Welcome to my personal website. Here, I share my research and projects.</p>
 
         <div class="card">
             <h2 class="section-title">📌 About Me</h2>
             <img src="https://github.com/user-attachments/assets/c218196a-17f7-4d06-8765-daa8d20c9b0b" alt="Eden Chien" class="profile-img">
             <p>Hello! I am <strong>Eden Chien</strong>.</p>
+            <p>I am from Changhua.</p>
         </div>
 
         <div class="card">
@@ -68,7 +69,8 @@
         <div class="card">
             <h2 class="section-title">🎓 Education</h2>
             <ul>
-                <li><strong>National Yang Ming Chiao Tung University (NYCU)</strong> – Information Management and Finance (2024 - Present)</li>
+                <li><strong>National Yang Ming Chiao Tung University (NYCU)</strong><br>
+                    – Department of Information Management and Finance (2024 - Present)</li>
                 <li><strong>Fu Jen Catholic University (FJU)</strong> – Accounting & Sociology (2015 - 2020)</li>
                 <li><strong>Changhua Girls' Senior High School (CHGSH)</strong> (2012 - 2015)</li>
             </ul>
