--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 
     <div class="container">
         <h1>👋 Hello, I'm Eden!</h1>
-        <p class="text-center">Welcome to my personal website. Here, I share my research and projects.</p>
+        <p class="text-center">Welcome to my personal website. </p>
 
         <div class="card">
             <h2 class="section-title">📌 About Me</h2>
             <img src="https://github.com/user-attachments/assets/c218196a-17f7-4d06-8765-daa8d20c9b0b" alt="Eden Chien" class="profile-img">
-            <p>Hello! I am <strong>Eden Chien</strong>.</p>
-            <p>I am from Changhua.</p>
+            <p>Hello! I am <strong>Eden Chien</strong>.I am from Changhua.</p>
+            
         </div>
 
         <div class="card">
